# turboquant-mlx-core

./: .gitignore  CITATION.cff  CLAUDE.md  CMakeLists.txt  Package.swift  README.md
.github/workflows/: ci.yml
benchmarks/: bench_dequant.cpp  bench_distributed.cpp  bench_e2e.cpp  bench_linear.cpp  bench_main.cpp
bindings/node/: addon.cpp  package.json
bindings/python/: CMakeLists.txt  bindings.cpp  pyproject.toml
bindings/rust/: README.md
cmake/: FindMLX.cmake
docs/: conversion.md
include/turboquant/: cache_snapshot.h  codebook.h  converter.h  decode_buffer.h  dequantizer.h  distributed.h  kv_cache.h  linear.h  module.modulemap  node_state.h  quantizer.h  transport.h  turboquant.h
include/turboquant/convert/: emit_sidecar.h  safetensors_header.h  shard_metadata.h  shard_strategy.h
include/turboquant_c/: module.modulemap  turboquant_c.h
metal/: turboquant_attention.metal  turboquant_dequant.metal  turboquant_dequant_mm.metal  turboquant_qjl.metal  turboquant_quantize.metal  turboquant_wht.metal
src/: attention_dispatch.cpp  cache_snapshot.cpp  codebook.cpp  converter.cpp  decode_buffer.cpp  dequantizer.cpp  distributed.cpp  kv_cache.cpp  linear.cpp  node_state.cpp  quantizer.cpp  rotation.cpp  serialization.cpp  transport.cpp  turboquant_c.cpp  turboquant_c_dequant.cpp
src/convert/: emit_sidecar.cpp  safetensors_header.cpp  shard_metadata.cpp  shard_strategy.cpp
tests/c_api/: test_c_api_cluster.c  test_c_api_distributed.c  test_c_api_kv_cache.c  test_c_api_linear_shard.c  test_c_api_model.c
tests/fixtures/: sample_hostfile.json
tests/fixtures/tiny_model/: config.json
tests/fixtures/tiny_model_tq8/: config.json
tests/integration/: test_attention_dispatch.cpp  test_cluster_e2e.cpp  test_converter_e2e.cpp  test_dequant_kernel.cpp  test_gpu_active.cpp  test_linear.cpp  test_perplexity.cpp
tests/unit/: test_cache_snapshot.cpp  test_codebook.cpp  test_decode_buffer.cpp  test_dequant_dtype.cpp  test_distributed.cpp  test_emit_sidecar.cpp  test_gpu_streams.cpp  test_kv_cache.cpp  test_linear_shard_forward.cpp  test_lut_dequant.cpp  test_node_state.cpp  test_parallel_converter.cpp  test_quantizer.cpp  test_residual_decorrelation.cpp  test_rotation.cpp  test_serialization.cpp  test_shard_metadata.cpp  test_transport.cpp
tools/: tq_convert.cpp  tq_dequant_model.cpp  tq_emit_sidecar.cpp
